--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "ts-node src/index.ts",
+    "prepare": "husky",
     "prepublishOnly": "npm run build && npm test"
   },
   "repository": {
@@ -42,19 +43,20 @@
     "CHANGELOG.md"
   ],
   "dependencies": {
-    "commander": "^11.1.0",
     "better-sqlite3": "^9.2.2",
     "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "date-fns": "^3.0.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
-    "@types/node": "^20.10.6",
     "@types/jest": "^29.5.11",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.10.6",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
