feat: add shell completions for bash, zsh, and fish
Add comprehensive tab completion support for all three major shells:

**Completion Scripts:**
- completions/tt.bash - Bash completion
- completions/_tt - Zsh completion
- completions/tt.fish - Fish completion

**Features:**
- Command name completion (start, stop, report, etc.)
- Flag completion for all commands
- Dynamic project suggestions from recent sessions (last 30 days)
- Dynamic tag suggestions from recent sessions (last 30 days)
- Week spec suggestions (current, last, ISO weeks)
- Fuzzy date completions (yesterday, monday, etc.)
- Common duration suggestions (15m, 1h, 2h, etc.)
- Relative time suggestions (-15m, -30m, -1h)
- State completions (working, paused, completed, abandoned)
- Output format completions (terminal, json, csv, table, log)

**Implementation:**
- Created tt-completion-helper binary for database queries
- Completion helper queries projects and tags from database
- All three shells use same helper for consistency
- Graceful fallback if helper not available

**Package Updates:**
- Added tt-completion-helper to bin in package.json
- Added completions/ directory to published files
- Updated README with installation instructions for all shells

Completes MVP Phase 2.1: Shell Completion Scripts.
Total deliverables: 3 completion scripts + 1 helper + documentation.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Unix-philosophy CLI time tracker with retroactive logging and comprehensive reporting",
   "main": "dist/index.js",
   "bin": {
-    "tt": "./dist/index.js"
+    "tt": "./dist/index.js",
+    "tt-completion-helper": "./dist/cli/completion-helper.js"
   },
   "scripts": {
     "build": "tsc && cp src/db/schema.sql dist/db/",
@@ -38,6 +39,7 @@
   "license": "MIT",
   "files": [
     "dist/",
+    "completions/",
     "README.md",
     "LICENSE",
     "CHANGELOG.md"
